Fixed CSS problem of alignment

--- a/css/index.css
+++ b/css/index.css
@@ -41,15 +41,16 @@ a:hover {
 }
 
 .heading-logo {
+	display: block;
 	max-width: 50%;
-	margin-top: 1.3em;
+	margin: auto;
 	background-color: var(--imageground);
 }
 
 .content {
 	width: 60%;
 	text-align: left;
-	transform: translate(33%, 0%);
+	margin: 0 auto;
 	background-color: var(--foreground);
 }
 
